--- a/src/index.scss
+++ b/src/index.scss
@@ -280,10 +280,11 @@ button {
 
   > button {
     appearance: none;
-    border: none;
     background: transparent;
     color: white;
     font-size: 1rem;
+    border-radius: 25px;
+    border: 2px solid rgb(255, 255, 255);
   }
 }
 
