--- a/src/index.scss
+++ b/src/index.scss
@@ -183,15 +183,14 @@ input[type='number']::-webkit-outer-spin-button {
     }
   }
 
-  &[data-state~='stopped'],
+  &[data-state~='expired'],
   &[data-state~='paused'] {
     .elapsed {
       animation: pulse 1s steps(1) infinite;
     }
   }
 
-  &[data-state~='running.overtime'],
-  &[data-state~='expired'] {
+  &[data-state~='running.overtime'] {
     circle {
       animation: pulse 1s steps(1) infinite;
     }
